# rosbag2_snapshot

./: .gitignore  README.md
.github/workflows/: cd.yml
rosbag2_snapshot/: CMakeLists.txt  package.xml
rosbag2_snapshot/include/rosbag2_snapshot/: snapshotter.hpp
rosbag2_snapshot/param/: multiple_topics.params.yaml  single_topic.params.yaml
rosbag2_snapshot/src/: snapshot.cpp  snapshotter.cpp
rosbag2_snapshot/test/: test_snapshot.py
rosbag2_snapshot_msgs/: CMakeLists.txt  package.xml
rosbag2_snapshot_msgs/msg/: TopicDetails.msg
rosbag2_snapshot_msgs/srv/: TriggerSnapshot.srv
