<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbag2_snapshot</name>
  <version>0.1.0</version>
  <description>The rosbag_snapshot package</description>
  <author email="kma1660+rsp@gmail.com">Kevin Allen</author>
  <author email="whitleysoftwareservices@gmail.com">Josh Whitley</author>
  <maintainer email="whitleysoftwareservices@gmail.com">Josh Whitley</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rosbag2</depend>
  <depend>rosbag2_snapshot_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>topic_tools</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
